Fix MArdown Rendering.

--- a/apps/learner-studio/static/index.html
+++ b/apps/learner-studio/static/index.html
@@ -56,7 +56,7 @@
       <p class="shortcut-hint">Shortcuts: <kbd>Ctrl/Cmd+S</kbd> Save, <kbd>Ctrl/Cmd+Enter</kbd> Run tests, <kbd>Alt+Shift+F</kbd> Format both, <kbd>Ctrl/Cmd+Shift+M</kbd> Focus mode, <kbd>Ctrl/Cmd+F</kbd> Find in editor, <kbd>Tab</kbd> insert tab, <kbd>Esc</kbd> close modal</p>
 
       <section id="panel-docs" class="panel docs-panel active">
-        <pre id="readme-view" class="doc-view"></pre>
+        <article id="readme-view" class="doc-view markdown-render"></article>
       </section>
 
       <section id="panel-workbench" class="panel workbench-panel">
